# Ciple-Framework

./: .env  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  conan_provider.cmake  conandata.yml  main.cpp
.github/workflows/: cmake-single-platform.yml
App/Http/Controller/: HomeController.h
Config/: App.h  Auth.h
Helpers/Auth/: JwtHelpers.h
Helpers/Fs/: Reader.h
Resources/Private/: private_key.pem  public_key.pem
Resources/Views/: variable.html
Routes/: Api.h  Web.h
Views/: index.html
